--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
-    "reflect-metadata": "^0.1.13"
+    "pg": "^8.11.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
