--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/vijeth-simha/education-documents-organizer#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.387.0",
+    "@aws-sdk/s3-request-presigner": "^3.388.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
