--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.2",
+    "shelljs": "^0.8.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
