--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,5 +26,5 @@ jobs:
             git pull origin master
             npm install
             npm run build
-            pm2 restart app
+            pm2 reload all
           EOF
