--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "copy-assets": "ts-node tools/copyAssets",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc && npm run copy-assets",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
