node env updated

--- a/env.example
+++ b/env.example
@@ -11,3 +11,4 @@ AWS_SECRET_ACCESS_KEY = <<YOUR_AWS_SECRET_KEY>>
 AWS_ACCESS_KEY_ID = <<YOUR_AWS_SECRET_KEY_ID>>
 AWS_BUCKET_REGION = <<YOUR_AWS_REGION>>
 AWS_BUCKET_NAME = <<YOUR_AWS_BUCKET_NAME>>
+NODE_ENV = development
